updated feat selection analysis

--- a/exploration/feat_selection.ipynb
+++ b/exploration/feat_selection.ipynb
@@ -252,7 +252,7 @@
       "Number of categorical features: 9\n",
       "\n",
       "Categorical features:\n",
-      "['agent1_playout', 'agent2', 'agent2_exploration_const', 'agent2_playout', 'agent1_selection', 'agent1_exploration_const', 'agent2_score_bounds', 'agent2_selection', 'agent1']\n"
+      "['agent2_playout', 'agent1_playout', 'agent1', 'agent1_exploration_const', 'agent2_selection', 'agent1_selection', 'agent2_score_bounds', 'agent2_exploration_const', 'agent2']\n"
      ]
     }
    ],
@@ -291,7 +291,7 @@
       "Number of categorical features: 8\n",
       "\n",
       "Categorical features:\n",
-      "['agent1_playout', 'agent2', 'agent2_exploration_const', 'agent2_playout', 'agent1_selection', 'agent2_score_bounds', 'agent2_selection', 'agent1']\n"
+      "['agent2_playout', 'agent1_playout', 'agent1', 'agent2_selection', 'agent1_selection', 'agent2_score_bounds', 'agent2_exploration_const', 'agent2']\n"
      ]
     }
    ],
@@ -330,7 +330,7 @@
       "Number of categorical features: 9\n",
       "\n",
       "Categorical features:\n",
-      "['agent2', 'agent1_playout', 'agent2_exploration_const', 'agent2_playout', 'agent1_selection', 'agent1_exploration_const', 'agent2_score_bounds', 'agent2_selection', 'agent1']\n"
+      "['agent2_playout', 'agent1_playout', 'agent1', 'agent1_exploration_const', 'agent2_selection', 'agent1_selection', 'agent2_score_bounds', 'agent2_exploration_const', 'agent2']\n"
      ]
     }
    ],
@@ -513,8 +513,8 @@
     "    join_type='intersection'\n",
     ")\n",
     "output = dict(\n",
-    "    numerical_features=num_cols,\n",
-    "    categorical_features=cat_cols\n",
+    "    numerical=num_cols,\n",
+    "    categorical=cat_cols\n",
     ")\n",
     "with open(\"../feat_selection/feat_selection_intersection_at_95.json\", \"w\") as f:\n",
     "    json.dump(output, f)"
@@ -544,8 +544,8 @@
     "    join_type='intersection'\n",
     ")\n",
     "output = dict(\n",
-    "    numerical_features=num_cols,\n",
-    "    categorical_features=cat_cols\n",
+    "    numerical=num_cols,\n",
+    "    categorical=cat_cols\n",
     ")\n",
     "with open(\"../feat_selection/feat_selection_intersection_at_96.json\", \"w\") as f:\n",
     "    json.dump(output, f)"
@@ -575,8 +575,8 @@
     "    join_type='intersection'\n",
     ")\n",
     "output = dict(\n",
-    "    numerical_features=num_cols,\n",
-    "    categorical_features=cat_cols\n",
+    "    numerical=num_cols,\n",
+    "    categorical=cat_cols\n",
     ")\n",
     "with open(\"../feat_selection/feat_selection_intersection_at_97.json\", \"w\") as f:\n",
     "    json.dump(output, f)"
@@ -606,8 +606,8 @@
     "    join_type='intersection'\n",
     ")\n",
     "output = dict(\n",
-    "    numerical_features=num_cols,\n",
-    "    categorical_features=cat_cols\n",
+    "    numerical=num_cols,\n",
+    "    categorical=cat_cols\n",
     ")\n",
     "with open(\"../feat_selection/feat_selection_intersection_at_98.json\", \"w\") as f:\n",
     "    json.dump(output, f)"
@@ -637,8 +637,8 @@
     "    join_type='intersection'\n",
     ")\n",
     "output = dict(\n",
-    "    numerical_features=num_cols,\n",
-    "    categorical_features=cat_cols\n",
+    "    numerical=num_cols,\n",
+    "    categorical=cat_cols\n",
     ")\n",
     "with open(\"../feat_selection/feat_selection_intersection_at_99.json\", \"w\") as f:\n",
     "    json.dump(output, f)"
@@ -667,8 +667,8 @@
     "    join_type='union'\n",
     ")\n",
     "output = dict(\n",
-    "    numerical_features=num_cols,\n",
-    "    categorical_features=cat_cols\n",
+    "    numerical=num_cols,\n",
+    "    categorical=cat_cols\n",
     ")\n",
     "with open(\"../feat_selection/feat_selection_union_at_80.json\", \"w\") as f:\n",
     "    json.dump(output, f)"
@@ -697,8 +697,8 @@
     "    join_type='union'\n",
     ")\n",
     "output = dict(\n",
-    "    numerical_features=num_cols,\n",
-    "    categorical_features=cat_cols\n",
+    "    numerical=num_cols,\n",
+    "    categorical=cat_cols\n",
     ")\n",
     "with open(\"../feat_selection/feat_selection_union_at_85.json\", \"w\") as f:\n",
     "    json.dump(output, f)"
@@ -727,8 +727,8 @@
     "    join_type='union'\n",
     ")\n",
     "output = dict(\n",
-    "    numerical_features=num_cols,\n",
-    "    categorical_features=cat_cols\n",
+    "    numerical=num_cols,\n",
+    "    categorical=cat_cols\n",
     ")\n",
     "with open(\"../feat_selection/feat_selection_union_at_90.json\", \"w\") as f:\n",
     "    json.dump(output, f)"
@@ -757,8 +757,8 @@
     "    join_type='union'\n",
     ")\n",
     "output = dict(\n",
-    "    numerical_features=num_cols,\n",
-    "    categorical_features=cat_cols\n",
+    "    numerical=num_cols,\n",
+    "    categorical=cat_cols\n",
     ")\n",
     "with open(\"../feat_selection/feat_selection_union_at_95.json\", \"w\") as f:\n",
     "    json.dump(output, f)"
