Kaggle Notebook | mcts-catboost-baseline | Version 20

--- a/kaggle/mcts-catboost-baseline.ipynb
+++ b/kaggle/mcts-catboost-baseline.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d2fa4818",
+   "id": "5937c9cf",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-11-20T15:23:27.516489Z",
-     "iopub.status.busy": "2024-11-20T15:23:27.515973Z",
-     "iopub.status.idle": "2024-11-20T15:23:30.549916Z",
-     "shell.execute_reply": "2024-11-20T15:23:30.548408Z"
+     "iopub.execute_input": "2024-11-26T23:23:27.547521Z",
+     "iopub.status.busy": "2024-11-26T23:23:27.547142Z",
+     "iopub.status.idle": "2024-11-26T23:23:30.012219Z",
+     "shell.execute_reply": "2024-11-26T23:23:30.011234Z"
     },
     "papermill": {
-     "duration": 3.043021,
-     "end_time": "2024-11-20T15:23:30.552271",
+     "duration": 2.472274,
+     "end_time": "2024-11-26T23:23:30.014220",
      "exception": false,
-     "start_time": "2024-11-20T15:23:27.509250",
+     "start_time": "2024-11-26T23:23:27.541946",
      "status": "completed"
     },
     "tags": []
@@ -51,13 +51,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0dce8a5",
+   "id": "20b1dddf",
    "metadata": {
     "papermill": {
-     "duration": 0.002729,
-     "end_time": "2024-11-20T15:23:30.558315",
+     "duration": 0.002516,
+     "end_time": "2024-11-26T23:23:30.019753",
      "exception": false,
-     "start_time": "2024-11-20T15:23:30.555586",
+     "start_time": "2024-11-26T23:23:30.017237",
      "status": "completed"
     },
     "tags": []
@@ -70,27 +70,37 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f40646f8",
+   "id": "8f453674",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-20T15:23:30.565762Z",
-     "iopub.status.busy": "2024-11-20T15:23:30.565257Z",
-     "iopub.status.idle": "2024-11-20T15:23:39.171613Z",
-     "shell.execute_reply": "2024-11-20T15:23:39.170308Z"
+     "iopub.execute_input": "2024-11-26T23:23:30.026413Z",
+     "iopub.status.busy": "2024-11-26T23:23:30.025971Z",
+     "iopub.status.idle": "2024-11-26T23:23:34.401432Z",
+     "shell.execute_reply": "2024-11-26T23:23:34.400411Z"
     },
     "papermill": {
-     "duration": 8.613349,
-     "end_time": "2024-11-20T15:23:39.174448",
+     "duration": 4.381066,
+     "end_time": "2024-11-26T23:23:34.403448",
      "exception": false,
-     "start_time": "2024-11-20T15:23:30.561099",
+     "start_time": "2024-11-26T23:23:30.022382",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.10/site-packages/sklearn/base.py:318: UserWarning: Trying to unpickle estimator OrdinalEncoder from version 1.5.2 when using version 1.2.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Specify the path where you want to save the serialized function\n",
-    "catboost_artifacts_path = '/kaggle/input/mcts-artifacts/catboost_predict.pkl'\n",
+    "catboost_artifacts_path = '/kaggle/input/mcts-artifacts/catboost_predict_fs24.pkl'\n",
     "\n",
     "# Load the function from the file\n",
     "with open(catboost_artifacts_path, 'rb') as f:\n",
@@ -100,19 +110,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6ad30c39",
+   "id": "eb8089d0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-20T15:23:39.182956Z",
-     "iopub.status.busy": "2024-11-20T15:23:39.182479Z",
-     "iopub.status.idle": "2024-11-20T15:23:39.191162Z",
-     "shell.execute_reply": "2024-11-20T15:23:39.189958Z"
+     "iopub.execute_input": "2024-11-26T23:23:34.411016Z",
+     "iopub.status.busy": "2024-11-26T23:23:34.410223Z",
+     "iopub.status.idle": "2024-11-26T23:23:34.416882Z",
+     "shell.execute_reply": "2024-11-26T23:23:34.416010Z"
     },
     "papermill": {
-     "duration": 0.015257,
-     "end_time": "2024-11-20T15:23:39.193285",
+     "duration": 0.012212,
+     "end_time": "2024-11-26T23:23:34.418662",
      "exception": false,
-     "start_time": "2024-11-20T15:23:39.178028",
+     "start_time": "2024-11-26T23:23:34.406450",
      "status": "completed"
     },
     "tags": []
@@ -121,7 +131,7 @@
     {
      "data": {
       "text/plain": [
-       "5"
+       "15"
       ]
      },
      "execution_count": 3,
@@ -136,19 +146,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "20e5b632",
+   "id": "a520835b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-20T15:23:39.201762Z",
-     "iopub.status.busy": "2024-11-20T15:23:39.201337Z",
-     "iopub.status.idle": "2024-11-20T15:23:39.213187Z",
-     "shell.execute_reply": "2024-11-20T15:23:39.211987Z"
+     "iopub.execute_input": "2024-11-26T23:23:34.426019Z",
+     "iopub.status.busy": "2024-11-26T23:23:34.425293Z",
+     "iopub.status.idle": "2024-11-26T23:23:34.435589Z",
+     "shell.execute_reply": "2024-11-26T23:23:34.434705Z"
     },
     "papermill": {
-     "duration": 0.019287,
-     "end_time": "2024-11-20T15:23:39.215894",
+     "duration": 0.015877,
+     "end_time": "2024-11-26T23:23:34.437477",
      "exception": false,
-     "start_time": "2024-11-20T15:23:39.196607",
+     "start_time": "2024-11-26T23:23:34.421600",
      "status": "completed"
     },
     "tags": []
@@ -158,8 +168,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "len(numerical_cols): 368\n",
-      "len(categorical_cols): 5\n"
+      "len(numerical_cols): 219\n",
+      "len(categorical_cols): 8\n"
      ]
     }
    ],
@@ -233,9 +243,9 @@
     "\n",
     "model_catboost = ModelInference(\n",
     "    # models=catboost_artifacts[\"models\"][:5],\n",
-    "    # models=catboost_artifacts[\"models\"][5:10],\n",
+    "    models=catboost_artifacts[\"models\"][5:10],\n",
     "    # models=catboost_artifacts[\"models\"][10:],\n",
-    "    models=catboost_artifacts[\"models\"],\n",
+    "    # models=catboost_artifacts[\"models\"],\n",
     "    numerical_cols=catboost_artifacts[\"numerical_cols\"],\n",
     "    categorical_cols=catboost_artifacts[\"categorical_cols\"],\n",
     "    # text_cols=[\"LudRules\"],\n",
@@ -247,19 +257,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0b4abd7e",
+   "id": "1e35e796",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-20T15:23:39.225023Z",
-     "iopub.status.busy": "2024-11-20T15:23:39.224553Z",
-     "iopub.status.idle": "2024-11-20T15:23:39.468054Z",
-     "shell.execute_reply": "2024-11-20T15:23:39.466665Z"
+     "iopub.execute_input": "2024-11-26T23:23:34.445089Z",
+     "iopub.status.busy": "2024-11-26T23:23:34.444384Z",
+     "iopub.status.idle": "2024-11-26T23:23:34.598757Z",
+     "shell.execute_reply": "2024-11-26T23:23:34.597729Z"
     },
     "papermill": {
-     "duration": 0.251065,
-     "end_time": "2024-11-20T15:23:39.470468",
+     "duration": 0.160142,
+     "end_time": "2024-11-26T23:23:34.600651",
      "exception": false,
-     "start_time": "2024-11-20T15:23:39.219403",
+     "start_time": "2024-11-26T23:23:34.440509",
      "status": "completed"
     },
     "tags": []
@@ -268,7 +278,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.11206963, -0.14541036, -0.04385829])"
+       "array([ 0.13764542, -0.16669373, -0.0130353 ])"
       ]
      },
      "execution_count": 5,
@@ -284,13 +294,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d6a8a79",
+   "id": "afbfcdf2",
    "metadata": {
     "papermill": {
-     "duration": 0.003094,
-     "end_time": "2024-11-20T15:23:39.477197",
+     "duration": 0.002802,
+     "end_time": "2024-11-26T23:23:34.606640",
      "exception": false,
-     "start_time": "2024-11-20T15:23:39.474103",
+     "start_time": "2024-11-26T23:23:34.603838",
      "status": "completed"
     },
     "tags": []
@@ -303,19 +313,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9c0f4872",
+   "id": "a5b4bff4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-20T15:23:39.485718Z",
-     "iopub.status.busy": "2024-11-20T15:23:39.485306Z",
-     "iopub.status.idle": "2024-11-20T15:23:40.025731Z",
-     "shell.execute_reply": "2024-11-20T15:23:40.024416Z"
+     "iopub.execute_input": "2024-11-26T23:23:34.613862Z",
+     "iopub.status.busy": "2024-11-26T23:23:34.613512Z",
+     "iopub.status.idle": "2024-11-26T23:23:35.015816Z",
+     "shell.execute_reply": "2024-11-26T23:23:35.014582Z"
     },
     "papermill": {
-     "duration": 0.547938,
-     "end_time": "2024-11-20T15:23:40.028388",
+     "duration": 0.410807,
+     "end_time": "2024-11-26T23:23:35.020363",
      "exception": false,
-     "start_time": "2024-11-20T15:23:39.480450",
+     "start_time": "2024-11-26T23:23:34.609556",
      "status": "completed"
     },
     "tags": []
@@ -330,19 +340,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "88cce172",
+   "id": "17306c40",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-20T15:23:40.039812Z",
-     "iopub.status.busy": "2024-11-20T15:23:40.039115Z",
-     "iopub.status.idle": "2024-11-20T15:23:40.045441Z",
-     "shell.execute_reply": "2024-11-20T15:23:40.044341Z"
+     "iopub.execute_input": "2024-11-26T23:23:35.031965Z",
+     "iopub.status.busy": "2024-11-26T23:23:35.030828Z",
+     "iopub.status.idle": "2024-11-26T23:23:35.036531Z",
+     "shell.execute_reply": "2024-11-26T23:23:35.035402Z"
     },
     "papermill": {
-     "duration": 0.015358,
-     "end_time": "2024-11-20T15:23:40.047634",
+     "duration": 0.013036,
+     "end_time": "2024-11-26T23:23:35.038857",
      "exception": false,
-     "start_time": "2024-11-20T15:23:40.032276",
+     "start_time": "2024-11-26T23:23:35.025821",
      "status": "completed"
     },
     "tags": []
@@ -359,19 +369,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "33ecc3b1",
+   "id": "8ae5f598",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-20T15:23:40.056157Z",
-     "iopub.status.busy": "2024-11-20T15:23:40.055693Z",
-     "iopub.status.idle": "2024-11-20T15:23:40.681767Z",
-     "shell.execute_reply": "2024-11-20T15:23:40.680872Z"
+     "iopub.execute_input": "2024-11-26T23:23:35.048611Z",
+     "iopub.status.busy": "2024-11-26T23:23:35.047464Z",
+     "iopub.status.idle": "2024-11-26T23:23:35.532162Z",
+     "shell.execute_reply": "2024-11-26T23:23:35.531332Z"
     },
     "papermill": {
-     "duration": 0.633942,
-     "end_time": "2024-11-20T15:23:40.684998",
+     "duration": 0.492264,
+     "end_time": "2024-11-26T23:23:35.534392",
      "exception": false,
-     "start_time": "2024-11-20T15:23:40.051056",
+     "start_time": "2024-11-26T23:23:35.042128",
      "status": "completed"
     },
     "tags": []
@@ -393,13 +403,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f80755fc",
+   "id": "079f0f89",
    "metadata": {
     "papermill": {
-     "duration": 0.00443,
-     "end_time": "2024-11-20T15:23:40.693260",
+     "duration": 0.004013,
+     "end_time": "2024-11-26T23:23:35.541707",
      "exception": false,
-     "start_time": "2024-11-20T15:23:40.688830",
+     "start_time": "2024-11-26T23:23:35.537694",
      "status": "completed"
     },
     "tags": []
@@ -420,7 +430,7 @@
     },
     {
      "datasetId": 5909723,
-     "sourceId": 9963606,
+     "sourceId": 10023763,
      "sourceType": "datasetVersion"
     }
    ],
@@ -449,14 +459,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 16.923779,
-   "end_time": "2024-11-20T15:23:41.621308",
+   "duration": 11.148089,
+   "end_time": "2024-11-26T23:23:36.264523",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-11-20T15:23:24.697529",
+   "start_time": "2024-11-26T23:23:25.116434",
    "version": "2.6.0"
   }
  },
